Made name nullable

--- a/BlazorApp2/Pages/Index.razor
+++ b/BlazorApp2/Pages/Index.razor
@@ -35,7 +35,7 @@ Welcome to your new app.
 
     public class NameFromAge
     {
-        public string name { get; set; }
+        public string? name { get; set; }
         public int count { get; set; }
         public int age { get; set; }
     }
